--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "build-views": "dottojs -s ./src -d ./src",
     "prepublish": "yarn run build-views",
+    "build": "yarn run build-views",
     "start": "micro test.js",
     "dev": "micro-dev test.js"
   },
@@ -33,6 +34,7 @@
     "dot": "1.1.3",
     "fs-extra": "6.0.1",
     "micro": "9.3.2",
+    "micro-dev": "3.0.0",
     "node-fetch": "2.6.1",
     "nyc": "14.1.1",
     "request": "2.87.0",
@@ -57,6 +59,7 @@
     "minimatch": "3.0.4",
     "path-is-inside": "1.0.2",
     "path-to-regexp": "2.2.1",
+    "pretty-bytes": "^5",
     "range-parser": "1.2.0"
   }
 }
